# foster_cpp

./: .gitignore  README.md
ch_02_01/: CMakeLists.txt  architecture.cpp  architecture.h  custom_dataset.cpp  custom_dataset.h  dataset_reader.cpp  dataset_reader.h  main.cpp  myrun
ch_02_03/: CMakeLists.txt  architecture.cpp  architecture.h  custom_dataset.cpp  custom_dataset.h  main.cpp  myrun
ch_03_01/: CMakeLists.txt  auto_encoder.cpp  auto_encoder.h  main.cpp
ch_03_02/: CMakeLists.txt  display.ipynb  main.cpp
ch_03_03/: CMakeLists.txt  main.cpp  variational_auto_encoder.cpp  variational_auto_encoder.h
ch_03_04/: CMakeLists.txt  main.cpp
ch_03_05/: CMakeLists.txt  convert_to_tensor.cpp  convert_to_tensor.h  custom_dataset.cpp  custom_dataset.h  main.cpp
ch_03_06/: CMakeLists.txt  add_attribute_vectors.cpp  add_attribute_vectors.h  custom_dataset_from_csv.cpp  custom_dataset_from_csv.h  draw.ipynb  main.cpp  make_attribute_vectors.cpp  make_attribute_vectors.h  morph_faces.h
ch_04_01/: CMakeLists.txt  display.ipynb  main.cpp  trainer.cpp  trainer.h
ch_04_01/dataset/: custom_dataset.cpp  custom_dataset.h
ch_04_01/models/: gan.cpp  gan.h
